Add swagger model validation to create a blog post
